crates/general/fixtures/invalid/comparison_chaining.zt
1 == 2 == 3

0 == 0 == 0

true == false == true

a == b == c

x < y < z

a <= b <= c

p > q > r

1 != 2 != 3

a == b != c

x < y == z

a <= b >= c

1 == 1 == 1 == 1

a == b == c == d == e

if (x == y == z) then 1 else 0

match (a == b == c) { true => 1; false => 0; }

1 + 2 == 3 == 4 - 1
